# yandex_bank_api

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  curl_examples.md
src/: application.rs  data.rs  domain.rs  lib.rs  main.rs  presentation.rs
src/application/: auth_service.rs  service.rs
src/data/: memory.rs  user_repository.rs
src/domain/: error.rs  models.rs  repository.rs  user.rs
src/infrastructure/: logging.rs  security.rs
src/presentation/: auth.rs  handlers.rs  middleware.rs
tests/: account_integration_tests.rs  api_tests.rs  auth_integration_tests.rs
